<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/RelativeLayout"
    tools:context="com.example.popey.cityquizmultiscreen.MainActivity">

    <ImageView
        android:id="@+id/questionImage"
        style="@style/TextFieldImage" />

    <TextView
        android:id="@+id/question"
        style="@style/TextFieldText"
        android:text="@string/first_q" />

    <RadioGroup
        android:id="@+id/answers_1"
        style="@style/RadioGroup">

        <RadioButton
            android:id="@+id/answer_1_a"
            style="@style/RadioButton"
            android:text="@string/q_1_a"
            android:theme="@style/RadioButtonStyle" />

        <RadioButton
            android:id="@+id/answer_1_b"
            style="@style/RadioButton"
            android:text="@string/q_1_b"
            android:theme="@style/RadioButtonStyle" />

        <RadioButton
            android:id="@+id/answer_1_c"
            style="@style/RadioButton"
            android:text="@string/q_1_c"
            android:theme="@style/RadioButtonStyle" />

        <RadioButton
            android:id="@+id/answer_1_d"
            style="@style/RadioButton"
            android:text="@string/q_1_d"
            android:theme="@style/RadioButtonStyle" />

    </RadioGroup>

    <TextView
        android:id="@+id/solution"
        style="@style/Solution2"
        android:layout_below="@id/answers_1" />

    <Button
        android:id="@+id/submit_button"
        style="@style/button"
        android:onClick="submitButton"
        android:text="@string/submit"
        android:visibility="visible" />

    <Button
        android:id="@+id/next"
        style="@style/button"
        android:onClick="next"
        android:text="@string/next"
        android:visibility="invisible" />
</RelativeLayout>
